# AfraidParser

./: .gitignore  AfraidParser.cabal
Source/: Algorithm.hs  Main.hs  Parser.hs
