Name:                AfraidParser
Version:             0.1
Synopsis:            Afraid.org Free DNS list parser
Stability:           Experimental
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2

Executable AfraidParser
  hs-source-dirs: Source
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9 && < 0.10,
    containers >= 0.4 && < 0.5,
    filepath >= 1.2 && < 1.3,
    Knyaz -any,
    tagsoup >= 0.12 && < 0.13,
    parsec >= 3.1 && < 3.2

  extensions: DeriveDataTypeable NewQualifiedOperators

  ghc-options: -Wall
